--- a/vite-porject/style.css
+++ b/vite-porject/style.css
@@ -1,6 +1,12 @@
-		@font-face {
+	@font-face {
       font-family: 'SF Pro';
-      src: url('./Avenir-Bold.ttf');
+      src: url('../Avenir-Bold.ttf');
+    }
+    @font-face {
+        font-family: 'Avenir';
+        font-style: normal;
+        font-weight: 400;
+        src: url(https://fonts.gstatic.com/l/font?kit=ijwWs5PnXdA4ZZUg4Zd-m2FJXKnyg4RcQFvYHHQ&skey=8887f17a62203d44&v=v4) format('woff2');
     }
     * {
       margin: 0;
@@ -35,8 +41,9 @@
       overflow: visible;
       width: 663px;
       height: 663px;
-      left: 598px;
-      top: 180px;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     .Ellipse_2_Class {
       opacity: 0.3;
@@ -46,8 +53,9 @@
       overflow: visible;
       width: 842px;
       height: 842px;
-      left: 508px;
-      top: 90px;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     .Ellipse_3_Class {
       opacity: 0.05;
@@ -57,27 +65,29 @@
       overflow: visible;
       width: 960px;
       height: 960px;
-      left: 449px;
-      top: 31px;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     .PeterBuild_Class {
       position: absolute;
-      left: 705px;
-      top: 457px;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       overflow: visible;
-      width: 449px;
       white-space: nowrap;
       text-align: left;
       font-family: Arial, Helvetica, sans-serif;
       font-style: normal;
       font-weight: bold;
       font-size: 90px;
-      color: rgba(255,255,255,1);
+      color: white;
     }
     .header_text_Class {
       position: absolute;
-      left: 784px;
-      top: 588px;
+      top: calc(60% + 10ch);
+      left: 50%;
+      transform: translate(-50%, -50%);
       overflow: visible;
       width: 281px;
       white-space: nowrap;
@@ -88,12 +98,23 @@
       font-size: 20px;
       color: rgba(255,255,255,1);
     }
+    .about {
+        background-image: url('../about.png');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        height: 1920px;
+        width: 1194px;
+    }
     .NIET_ALLEEN_EEN_TIMMERMAN_Class {
-      position: absolute;
+    /*position: absolute;
       left: 793px;
       top: 1484px;
+      width: 335px;*/
       overflow: visible;
-      width: 335px;
+      padding-top: 75vh;
+      left: 50%;
+      transform: translate(-50%, -50%);
       white-space: nowrap;
       text-align: center;
       font-family: 'SF Pro';
@@ -102,19 +123,22 @@
       font-size: 40px;
       color: rgba(255,255,255,1);
     }
-    .In_mijn_studietijd_ben_ik_in_S_Class {
+    .InfoAbout {/*
       position: absolute;
       left: 703px;
       top: 1609px;
       overflow: visible;
       width: 515px;
-      white-space: nowrap;
-      line-height: 30px;
       margin-top: -4.5px;
+      line-height: 30px;*/
+      padding-top: 1vh;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      white-space: nowrap;
       text-align: center;
-      font-family: 'SF Pro';
+      font-family: 'Avenir';
       font-style: normal;
-      font-weight: normal;
+      font-weight: 500;
       font-size: 21px;
       color: rgba(191,187,187,1);
     }
@@ -737,12 +761,13 @@
       max-width: 50%;
     }
     .head {
-      background-image: url('./peter.png');
+      background-image: url('../peter.png');
       background-position: center;
       background-repeat: no-repeat;
-      background-attachment: fixed;
+      background-attachment: scroll;
       background-size: cover;
       background-blend-mode: color;
       width: 1796px;
-      height: 1361px;
+      /*height: 1361px;*/
+      height: 125vh;
     }
