fixed center problem with niet allen timmer man

--- a/vite-porject/style.css
+++ b/vite-porject/style.css
@@ -17,22 +17,6 @@
   body {
     background-color: #132999;
   }
-  .about_Class {
-    position: absolute;
-    width: 99vw;
-    height: 99vh;
-    /*left: -54px; */
-    top: 1072px;
-    overflow: visible;
-  }
-  .peter_Class {
-    position: absolute;
-    width: 1796px;
-    height: 1361px;
-    left: 62px;
-    top: -140px;
-    overflow: visible;
-  }
   .Ellipse_1_Class {
     opacity: 0.5;
   }
@@ -104,7 +88,7 @@
     background-attachment: fixed;
     background-size: cover;
     height: 100vh;
-    width: 1194px;
+    width: 100vw;
     display: grid;
     place-content: center;
     gap: 1ch;
@@ -162,30 +146,64 @@
     color: white;
     padding: 1vw;
   }
+  
+  
+  
+  /**
+  - MARK: tot hier heb ik alles gedaan en gecheckt
+  **/
+  
+  .projecten {
+    display: grid;
+    place-content: center;
+    gap: 1ch;
+  }
+  .ProjectenHeader {
+    position: relative;
+    top: 20vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: visible;
+    white-space: nowrap;
+    text-align: center;
+    font-family: 'SF Pro';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    color: #00eafa;
+    letter-spacing: 0.2px;
+  }
+  .protofolio {
+    padding-top: 10px;
+    display: flex;
+    align-items: center;
+    align-content: space-between;
+    flex-direction: row;
+  }
+  .protofolio img {
+    margin-top: 10px;
+    width: 326px;
+    height: 500px;
+  }
+  .protofolio svg {
+    width: 326px;
+    height: 10px;
+  }
+  .protofolio h1 {
+    overflow: visible;
+    white-space: nowrap;
+    text-align: left;
+    font-family: 'SF Pro';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    color: white;
+    letter-spacing: 0.2px;
+  }
 
 
 
-/**
-- Mark tot hier heb ik alles gedaan en gecheckt
-**/
-
-
-    .ProjectenHeader {
-      position: absolute;
-      left: 808px;
-      top: 2601px;
-      overflow: visible;
-      width: 305px;
-      white-space: nowrap;
-      text-align: center;
-      font-family: 'SF Pro';
-      font-style: normal;
-      font-weight: normal;
-      font-size: 50px;
-      color: #00eafa;
-      letter-spacing: 0.2px;
-    }
-
+  /*
   .PROJECT_TITLE__Class {
     position: absolute;
     left: 401px;
@@ -282,9 +300,10 @@
     top: 3068.5px;
     transform: matrix(1,0,0,1,0,0);
   }
+  */
   .about_2_Class {
     position: absolute;
-    width: 1761px;
+    width: 100vw;
     height: 1080px;
     left: 80px;
     top: 3570px;
@@ -541,7 +560,7 @@
     background-attachment: scroll;
     background-size: cover;
     background-blend-mode: color;
-    width: 1796px;
+    width: 100vw;
     /*height: 1361px;*/
     height: 125vh;
   }
