--- a/vite-porject/style.css
+++ b/vite-porject/style.css
@@ -87,7 +87,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    height: 100vh;
+    height: 125vh;
     width: 100vw;
     display: grid;
     place-content: center;
@@ -95,7 +95,7 @@
   }
   .about_header {
     overflow: visible;
-    padding-top: 25vh;
+    padding-top: 15vh;
     white-space: nowrap;
     text-align: center;
     font-family: 'SF Pro';
@@ -154,15 +154,15 @@
   **/
   
   .projecten {
-    display: grid;
-    place-content: center;
+    padding-top: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 1ch;
   }
   .ProjectenHeader {
-    position: relative;
     top: 20vh;
-    left: 50%;
-    transform: translate(-50%, -50%);
     overflow: visible;
     white-space: nowrap;
     text-align: center;
@@ -174,16 +174,20 @@
     letter-spacing: 0.2px;
   }
   .protofolio {
-    padding-top: 10px;
+    padding-top: 100px !important; 
     display: flex;
     align-items: center;
     align-content: space-between;
     flex-direction: row;
+    width: min-content;
   }
   .protofolio img {
     margin-top: 10px;
     width: 326px;
     height: 500px;
+  }
+  .protofolio div {
+    padding: 5vw;
   }
   .protofolio svg {
     width: 326px;
@@ -200,9 +204,9 @@
     color: white;
     letter-spacing: 0.2px;
   }
-
-
-
+  
+  
+  
   /*
   .PROJECT_TITLE__Class {
     position: absolute;
