--- a/vite-porject/style.css
+++ b/vite-porject/style.css
@@ -181,7 +181,7 @@
     height: 500px;
   }
   .protofolio div {
-    padding: 3vw;
+    padding: clamp(10px, 3vw, 100px);
   }
   .protofolio svg {
     width: 326px;
@@ -282,12 +282,7 @@
     align-content: space-between;
     flex-direction: column;
   }
-  .CONTACT_Class {/*
-    position: absolute;
-    left: 833px;
-    top: 4863px;
-    overflow: visible;
-    width: 255px;*/
+  footer .header {
     white-space: nowrap;
     text-align: center;
     font-family: 'SF Pro';
@@ -296,14 +291,35 @@
     font-size: 50px;
     color: rgba(0,234,250,1);
     letter-spacing: 0.5px;
+    padding: 15vh;
   }
   form input {
+    color: white;
+    flex-wrap: wrap-reverse;
     background-color: #132999;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
     border: none;
     border-bottom: 2px solid #00eafa;
+  }
+  form label {
+    left: 8px;
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    transition: all 200ms;
+    color: white;
+  }
+  form button {
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: #00eafa;
+    font-family: 'SF Pro';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
   }
   /*
   .Naam {
