--- a/vite-porject/shop.css
+++ b/vite-porject/shop.css
@@ -13,11 +13,10 @@ main {
     padding-top: 5em;
     background-image: url('./projecten.png');
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: cover;
     background-blend-mode: color;
     width: 95vw;
-    height: 500vh;
     display: flex;
     align-items: center;
     align-content: center;
@@ -39,22 +38,27 @@ h1 {
 section {
     display: grid;
     grid-template-columns: auto auto;
-    grid-gap: 5ch;
+    grid-gap: 1ch;
 }
-section div {
+section a {
     position: relative;
     text-align: center;
     color: white;
+    padding: 2vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 section h1 {
     font-weight: bold;
-    font-size: 90px;
+    font-size: 40px;
+    white-space: pre-line;
     color: white;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 section img {
     border-radius: 15px;
+    width: 30vw;
 }
