--- a/vite-porject/product.css
+++ b/vite-porject/product.css
@@ -1,12 +1,12 @@
-	@font-face {
+@font-face {
         font-family: 'SF Pro';
-        src: url('../Avenir-Bold.ttf');
+        src: url('Avenir-Bold.ttf');
     }
     @font-face {
         font-family: 'Avenir';
         font-style: normal;
         font-weight: 400;
-        src: url(https://fonts.gstatic.com/l/font?kit=ijwWs5PnXdA4ZZUg4Zd-m2FJXKnyg4RcQFvYHHQ&skey=8887f17a62203d44&v=v4) format('woff2');
+        src: url('https://fonts.gstatic.com/l/font?kit=ijwWs5PnXdA4ZZUg4Zd-m2FJXKnyg4RcQFvYHHQ&skey=8887f17a62203d44&v=v4') format('woff2');
     }
     * {
         margin: 0;
