--- a/vite-porject/project.css
+++ b/vite-porject/project.css
@@ -11,7 +11,7 @@ body {
 
 main {
     padding-top: 5em;
-    background-image: url('./projecten.png');
+    background-image: url('projecten.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -58,3 +58,4 @@ section h1 {
 section img {
     border-radius: 15px;
 }
+
