--- a/vite-porject/succes.css
+++ b/vite-porject/succes.css
@@ -1,6 +1,6 @@
 	@font-face {
         font-family: 'SF Pro';
-        src: url('../Avenir-Bold.ttf');
+        src: url('Avenir-Bold.ttf');
     }
     @font-face {
         font-family: 'Avenir';
