--- a/vite-porject/succes.css
+++ b/vite-porject/succes.css
@@ -61,4 +61,20 @@
         height: 30vh;
         border-radius: 5px;
     }
-    
+    @media only screen and (max-width: 768px) {
+        /* Mobile */
+        main {
+            height: 95vh;
+        }
+        h1 {
+            font-size: 28px;
+            top: 25%;
+            width: 99vw;
+        }
+        h4 {
+            width: 99vw;
+        }
+        pre {
+            width: 99vw;
+        }
+    }
