--- a/vite-porject/succes.css
+++ b/vite-porject/succes.css
@@ -1,4 +1,4 @@
-	@font-face {
+    @font-face {
         font-family: 'SF Pro';
         src: url('Avenir-Bold.ttf');
     }
@@ -6,7 +6,7 @@
         font-family: 'Avenir';
         font-style: normal;
         font-weight: 400;
-        src: url(https://fonts.gstatic.com/l/font?kit=ijwWs5PnXdA4ZZUg4Zd-m2FJXKnyg4RcQFvYHHQ&skey=8887f17a62203d44&v=v4) format('woff2');
+        src: url('https://fonts.gstatic.com/l/font?kit=ijwWs5PnXdA4ZZUg4Zd-m2FJXKnyg4RcQFvYHHQ&skey=8887f17a62203d44&v=v4') format('woff2');
     }
     * {
         margin: 0;
@@ -60,4 +60,22 @@
         color: #132999;
         height: 30vh;
         border-radius: 5px;
+    }
+
+    @media only screen and (max-width: 768px) {
+        /* Mobile */
+        main {
+            height: 95vh;
+        }
+        h1 {
+            font-size: 28px;
+            top: 25%;
+            width: 99vw;
+        }
+        h4 {
+            width: 99vw;
+        }
+        pre {
+            width: 99vw;
+        }
     }
